[package]
name = "dustloopbot-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggstdl = { git = "https://github.com/sagansfault/ggstdl", branch = "main" }
tokio = { version = "1.24.2", features = ["full"] }
serenity = "0.11.5"